@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: php_gd.h,v 1.59.2.3.2.5.2.1 2007/12/31 07:17:08 sebastian Exp $ */
+/* $Id: php_gd.h,v 1.59.2.3.2.5.2.2 2008/01/30 09:41:12 dmitry Exp $ */
 
 #ifndef PHP_GD_H
 #define PHP_GD_H
@@ -51,9 +51,11 @@
 #define PHP_GDIMG_TYPE_GD2PART 10
 
 #ifdef PHP_WIN32
-#define PHP_GD_API __declspec(dllexport)
+#	define PHP_GD_API __declspec(dllexport)
+#elif defined(__GNUC__) && __GNUC__ >= 4
+#	define PHP_GD_API __attribute__ ((visibility("default")))
 #else
-#define PHP_GD_API
+#	define PHP_GD_API
 #endif
 
 PHPAPI extern const char php_sig_gif[3];
